--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,8 +1,108 @@
-body {
-  padding: 50px;
-  font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
+* {
+  padding: 0px;
+  margin: 0px;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
 }
 
-a {
-  color: #00B7FF;
+body {
+  background-color: lightblue;
 }
+
+nav {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  border: 2px solid black;
+  margin: 50px 50px;
+  padding: 10px;
+  background-color: white;
+}
+
+nav ul {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  list-style-type: none;
+}
+
+nav ul li {
+  margin: 0px 10px;
+}
+
+main {
+  padding: 50px 200px;
+}
+
+main .card,
+main .data {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  border: 2px solid black;
+  background-color: white;
+  padding: 10px;
+  margin: 10px 0px;
+}
+
+main .card .div1,
+main .data .div1 {
+  width: 25%;
+}
+
+main .card .div1 img,
+main .data .div1 img {
+  width: 100px;
+}
+
+main .card .div2,
+main .data .div2 {
+  width: 75%;
+}
+
+main .card .div2 span,
+main .data .div2 span {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+.signup {
+  background-color: white;
+  margin: 0px auto;
+  display: block;
+  width: 300px;
+}
+
+input[type='radio'] {
+  background-image: url("../images/Ape1.png");
+}
+
+.login {
+  background-color: white;
+  margin: 0px auto;
+  display: block;
+  width: 300px;
+}
+
+form {
+  background-color: white;
+  margin: 0px auto;
+  display: block;
+  width: 300px;
+}
+/*# sourceMappingURL=style.css.map */
