--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -3,7 +3,10 @@
   <%- include('./head.ejs') %>
 
   <body>
-    <%- include('./nav.ejs') %>
+    <%- include('./nav.ejs') %> <% if(typeof alert != 'undefined'){ %> <%
+    alert.forEach((err)=>{ %>
+    <p><%= err.msg %></p>
+    <% }) %> <% } %>
 
     <form class="signup" action="/signup" method="post" autocomplete="on">
       <h1>Sign Up</h1>
@@ -15,8 +18,8 @@
           name="username"
           type="text"
           autocomplete="username"
-          required
           autofocus
+          required
         />
       </section>
       <section>
